--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Important Notes:
 # Every field you add must be added to the root build.gradle expandProps map.
 # Project
-version=1.1.0-SNAPSHOT
+version=1.1.0
 group=com.github.iunius118.cbwchilipeppersandfoods
 java_version=21
 
