--- a/.github/workflows/release_draft.yml
+++ b/.github/workflows/release_draft.yml
@@ -17,13 +17,13 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v2
       - name: setup jdk ${{ matrix.java }}
         uses: actions/setup-java@v4
         with:
           distribution: 'microsoft'   # When using Java 8, set 'temurin'
           java-version: ${{ matrix.java }}
+      - name: setup gradle
+        uses: gradle/actions/setup-gradle@v4
       - name: cache
         uses: actions/cache@v4
         with:
